--- a/floskell.cabal
+++ b/floskell.cabal
@@ -57,8 +57,9 @@ library
     ghc-options:      -Wall
     build-depends:
         base >=4.9 && <4.19,
-        aeson >=0.11.3.0 && <2.2,
+        aeson >=0.11.3.0 && <2.3,
         attoparsec >=0.13.1.0 && <0.15,
+        attoparsec-aeson >=2.1.0.0 && <2.3,
         bytestring >=0.10.8.1 && <0.13,
         containers >=0.5.7.1 && <0.7,
         data-default >=0.7.1.1 && <0.8,
