--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ ubuntu-latest, macOS-latest ]
-        ghc: [ '8.4', '8.6', '8.8', '8.10', '9.0', '9.2', '9.4', '9.6' ]
+        ghc: [ '8.4', '8.6', '8.8', '8.10', '9.0', '9.2', '9.4', '9.6', '9.8' ]
         include:
           - os: ubuntu-latest
             ghc: '8.4'
