Disable broken mac-OS configurations

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,14 @@ jobs:
         exclude:
           - os: macOS-latest
             ghc: '8.4'
+          - os: macOS-latest
+            ghc: '8.6'
+          - os: macOS-latest
+            ghc: '8.8'
+          - os: macOS-latest
+            ghc: '8.10'
+          - os: macOS-latest
+            ghc: '9.0'
 
     runs-on: ${{ matrix.os }}
 
